allow both h2 and effect size arguments, and return both in output
Sometimes it makes more sense to specify effect size directly
than heritability, so allow either and always return both from
variant_effect. Also add a power calculation function.

--- a/simphen/NAMESPACE
+++ b/simphen/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(outcome_from_covMat)
 export(outcome_from_covMat_blocks)
+export(power)
 export(var_multiple_strata)
 export(var_single_stratum)
 export(variant_effect)
