function to add variant effect and calculate p-value
Instead of setting up an iterator object, use internal GENESIS
function to run assoc test directly on genotype vector after
adding effect to outcome

--- a/simphen/NAMESPACE
+++ b/simphen/NAMESPACE
@@ -5,9 +5,12 @@ export(outcome_from_covMat_blocks)
 export(power)
 export(var_multiple_strata)
 export(var_single_stratum)
+export(variant_assoc)
 export(variant_effect)
 import(Matrix)
 import(data.table)
 import(igraph)
+importFrom(stats,pchisq)
+importFrom(stats,qchisq)
 importFrom(stats,rnorm)
 importFrom(stats,var)
