--- a/simphen/NAMESPACE
+++ b/simphen/NAMESPACE
@@ -13,4 +13,5 @@ import(igraph)
 importFrom(stats,pchisq)
 importFrom(stats,qchisq)
 importFrom(stats,rnorm)
+importFrom(stats,setNames)
 importFrom(stats,var)
