allow variant_genotypes to take either variant.id or variant.sel

--- a/simphen/NAMESPACE
+++ b/simphen/NAMESPACE
@@ -8,6 +8,7 @@ export(var_multiple_strata)
 export(var_single_stratum)
 export(variant_assoc)
 export(variant_effect)
+export(variant_genotypes)
 import(Matrix)
 import(data.table)
 import(igraph)
