tidying up for R check, version bump

--- a/simphen/DESCRIPTION
+++ b/simphen/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: simphen
-Version: 0.1.0
+Version: 0.2.0
 Type: Package
 Title: Utilities for simulating phenotypes based on a covariance matrix
 Description: Utilities for simulating phenotypes based on a covariance matrix.
 Author: Stephanie Gogarten
 Maintainer: Stephanie Gogarten <sdmorris@uw.edu>
 License: MIT + file LICENSE
-Depends:
+Depends: R (>= 3.5.0)
 Imports: stats, Matrix, data.table, igraph
 Suggests: roxygen2, testthat, knitr, rmarkdown, 
     SeqArray, SeqVarTools, Biobase, GENESIS, SNPRelate
