--- a/dockstore.yml
+++ b/dockstore.yml
@@ -2,6 +2,7 @@ version: 1.2
 workflows:
    - name: allele_freq
      subclass: CWL
+     publish: true
      primaryDescriptorPath: /tools/allele_freq.cwl
      authors:
        - name: Stephanie Gogarten
