fix name of dockstore file, add test file

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -4,6 +4,8 @@ workflows:
      subclass: CWL
      publish: true
      primaryDescriptorPath: /tools/allele_freq.cwl
+     testParameterFiles:
+         - /tools/allele_freq.test.json
      authors:
        - name: Stephanie Gogarten
          orcid: 0000-0002-7231-9745
